[package]
name = "holder"
version = "0.1.0"
authors = ["ryoksmt <ryo.arima.ksmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.0"
router = "0.6.0"
warp = "0.2.1"
serde = { version ="1.0.104", features = ["derive"] }
rustc-serialize = "*"
url = "*"
urlencoded = "*"